// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshots orientation left [default] 1`] = `
<div
  class="flex antialiased flex-row items-center gap-3"
>
  <div
    class="component order-1 md circle"
  >
    <img
      alt="Avatar"
      class="avatar circle"
      height="48"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="48"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots orientation right 1`] = `
<div
  class="flex antialiased flex-row items-center gap-3"
>
  <div
    class="component order-3 md circle"
  >
    <img
      alt="Avatar"
      class="avatar circle"
      height="48"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="48"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots orientation top 1`] = `
<div
  class="flex antialiased flex-col gap-3"
>
  <div
    class="component order-1 md circle"
  >
    <img
      alt="Avatar"
      class="avatar circle"
      height="48"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="48"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots size lg 1`] = `
<div
  class="flex antialiased flex-row items-center gap-4"
>
  <div
    class="component order-1 lg circle"
  >
    <img
      alt="Avatar"
      class="avatar circle"
      height="72"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="72"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots size md [default] 1`] = `
<div
  class="flex antialiased flex-row items-center gap-3"
>
  <div
    class="component order-1 md circle"
  >
    <img
      alt="Avatar"
      class="avatar circle"
      height="48"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="48"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots size sm 1`] = `
<div
  class="flex antialiased flex-row items-center gap-1"
>
  <div
    class="component order-1 sm circle"
  >
    <img
      alt="Avatar"
      class="avatar circle"
      height="32"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="32"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;
